--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -4,6 +4,9 @@
   padding: 2em;
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
 .logo {
@@ -18,19 +21,13 @@
   align-items: center;
   justify-content: center;
   gap: 1.5em;
-  /* background: brown; */
 }
 
 .link {
   color: var(--black);
-  /* background: blue; */
 }
 
 .toolTip {
   font-family: "Poppins";
   font-size: 1rem;
-}
-
-.icon {
-  color: var(--black);
 }
