--- a/src/Components/UI/Button.module.css
+++ b/src/Components/UI/Button.module.css
@@ -1,17 +1,3 @@
-/* .btn {
-  padding: 0.5em 1.5em;
-  width: 100px;
-  border-radius: 100em;
-  border: none;
-  outline: none;
-  background: var(--turquoise);
-  font-family: "Poppins";
-  font-size: 1rem;
-  cursor: pointer;
-  transition: 200ms ease-in;
-
-} */
-
 .btn {
   padding: 0.5em 2em;
   border-radius: 0.4em;
@@ -22,6 +8,7 @@
   cursor: pointer;
   transition: 0.08s ease-in;
   font-family: "Poppins";
+  width: 50%;
 }
 
 .btn:hover {
