--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html {
 
 :root {
   --primary-bg: #fff;
-  --turquoise: rgb(0, 199, 179);
+  --turquoise: #00c7b3;
   --black: rgb(27, 27, 27);
   --grey: rgb(48, 48, 48);
 }
