--- a/src/Components/UI/Button.module.css
+++ b/src/Components/UI/Button.module.css
@@ -1,6 +1,6 @@
 .btn {
   padding: 0.5em 2em;
-  border-radius: 0.4em;
+  border-radius: 100rem;
   border: 2px solid var(--turquoise);
   outline: none;
   background: transparent;
