--- a/src/Components/Home/FeaturedProducts.module.css
+++ b/src/Components/Home/FeaturedProducts.module.css
@@ -8,3 +8,11 @@
   align-content: center;
   justify-items: center;
 }
+
+.loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
