--- a/src/Components/Home/HomeSection.module.css
+++ b/src/Components/Home/HomeSection.module.css
@@ -40,6 +40,7 @@
 }
 
 .image {
+  position: relative;
   height: 100%;
   width: 40%;
   display: flex;
@@ -83,4 +84,12 @@
   100% {
     transform: scale(1, 1) translateY(0);
   }
+}
+
+.animate1 {
+  position: relative;
+}
+
+.animate2 {
+  position: relative;
 }
